# simple-trainer

./: .gitignore  ChangeLog.md  ChangeLog.org  README.md  pyproject.toml  requirements.txt  setup.py  simple_trainer.py
simple_trainer/: functions.py  helpers.py  hook_functions.py  hooks.py  interface.py  models.py  pipeline.py  prefetch.py  trainer.py
tests/: conftest.py  fixtures.py  test_helpers.py  test_hooks.py  test_interface.py  test_pipeline.py  test_prefetch.py  test_trainer.py  util.py
