[tool.poetry]
name = "simple_trainer"
version = "0.3.4"
description = "A micro-training-framework on top of pytorch for Machine Learning and Deep Learning"
authors = ["Akshay <atavist13@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.2.0"
numpy = "^1.17.0"
pynvml = "^8.0.3"
pydantic = { git = "https://github.com/akshaybadola/pydantic.git" }
common-pyutil = "^0.6.1"
uvicorn = "^0.18.1"
starlette = "^0.20.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
torchvision = "0.*"
pytest-cov = "^2.12.1"
pdbpp = {version = "*", optional = true, extras = ["debug"]}

[tool.poetry.extras]
debug = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
